2011-02-21  vadim  <vadim@netcitadel.com>

	* platform/pix.xml: see #1990 "Change default value for Cisco
	ASA/PIX 7+ to generate outbound ACLs". Newly created PIX/ASA
	firewall objects will now have "generate outbound acl" option
	turned on by default.

	* newFirewallDialog.cpp (showPage): fixes #1678 "When creating a
	firewall from template it appears that a default template is
	selected". When user arrives at the page where they choose
	template to create new firewall object from, the first template
	should be automatically selected.

	* AddressRangeDialog.cpp (applyChanges): fixes #1971 "Address
	range can be created with end address lower than start address".
	Address Range object dialog should not let the user enter range
	end address which is lower than range start address. Dialog
	behavior is now similar to the behavior of the tcp and udp service
	dialog where user can not enter port range end number lower than
	port range start number.

	* InterfaceData.cpp (guessLabel): fixes #2113 "ASA/PIX SNMP
	discovery - assign default labels based on interface description".
	Added pattern to match Cisco ASA interface description which is
	different from Cisco PIX interface descriptions as returned via
	snmp.

2011-02-20  vadim  <vadim@netcitadel.com>

	* BaseCompiler.cpp (getErrorsForRule): fixes #2124 "some error
	messages get multiplied when compiler splits rules". Under certain
	circumstances error messages could appear multiple times in the
	generated script.

	* Compiler.cpp (_expand_interface): fixes #1920 "Setting host
	interface to unnumbered after it has been assigned IP address
	doesn't have desired effect". Compiler still used ip addresses
	that belonged to the interface even if it switchd to "unnumbered".
	These children address objects should be ignored.

2011-02-19  vadim  <vadim@netcitadel.com>

	* NATCompiler_pix.cpp (processNext): see #2098 Added support for
	user-configurable inbound and outbound interfaces in Cisco PIX/ASA